# fastapi-pagination

./: .gitignore  .pre-commit-config.yaml  README.md  docs_requirements.txt  mkdocs.yml  netlify.toml  pyproject.toml  pytest.ini  setup.cfg
.github/: dependabot.yml
.github/workflows/: automerge.yml  lint.yml  publish.yml  test.yml
docs/: advanced.md  contributing.md  customization.md  first-steps.md  index.md  license.md  limit-offset.md  v0_13_migration.md  v0_14_migration.md
docs/customization/: customizer_combinations.md  general.md
docs/customization/customizers/: use_additional_fields.md  use_excluded_fields.md  use_field_type_annotations.md  use_fields_aliases.md  use_flatten_page.md  use_include_total.md  use_model_config.md  use_module.md  use_name.md  use_optional_params.md  use_params.md  use_params_fields.md  use_pydantic_v1.md  use_quoted_cursor.md  use_response_headers.md
docs/faq/: faq.md
docs/integrations/: available-integrations.md  available.md  integrations.md  peewee.md  sqlalchemy.md
docs/integrations/sqlalchemy/: cursor_pagination.md  general.md  paginate.md  relationships.md
docs/learn/pagination/: general.md  techniques.md
docs/learn/tutorial_advanced/: custom_paginate.md  low_level_api.md
docs/learn/tutorial_user_guide/: add_to_route.md  elements.md  first_steps.md  items_transformer.md  own_page_model.md  page_links.md  paginate.md
docs/tutorials/: cursor-pagination.md  first-steps.md  items-transformer.md  limit-offset-pagination.md  links-pagination.md  page-number-pagination.md
docs/tutorials_advanced/: custom-page.md  custom-paginate.md  custom-params.md  customization.md
docs_src/tutorial/: cursor_pagination.py  cursor_pagination_with_total.py  first_steps.py  items_transformer.py  limit_offset_pagination.py  links_pagination.py  page_number_pagination.py
docs_src/tutorials_advanced/: custom_page.py  custom_paginate.py  custom_params.py  customization.py
examples/: pagination_async_sqlalchemy.py  pagination_asyncpg.py  pagination_beanie.py  pagination_bunnet.py  pagination_databases.py  pagination_gino.py  pagination_limit_offset.py  pagination_mongoengine.py  pagination_motor.py  pagination_orm.py  pagination_ormar.py  pagination_piccolo.py  pagination_scylla.py  pagination_sqlalchemy.py  pagination_tortoise.py
examples/cursor/: app.py
examples/cursor/templates/: index.html
fastapi_pagination/: __init__.py  _warns.py  api.py  async_paginator.py  bases.py  config.py  cursor.py  custom_page.py  customization.py  default.py  dependencies.py  errors.py  flow.py  flows.py  iterables.py  limit_offset.py  optional.py  page.py  paginator.py  params.py  pydantic.py  types.py  typing_utils.py  utils.py
fastapi_pagination/ext/: async_sqlalchemy.py  async_sqlmodel.py  asyncpg.py  beanie.py  bunnet.py  cassandra.py  databases.py  django.py  elasticsearch.py  firestore.py  gino.py  mongoengine.py  motor.py  odmantic.py  orm.py  ormar.py  peewee.py  piccolo.py  pony.py  psycopg.py  pymongo.py  sqlalchemy.py  sqlalchemy_future.py  sqlmodel.py  tortoise.py  utils.py
fastapi_pagination/links/: __init__.py  bases.py  default.py  limit_offset.py  limmit_offset.py
fastapi_pagination/pydantic/: common.py  consts.py  types.py  v1.py  v2.py
scripts/: ci-prepare.sh  ci-test.sh
tests/: base.py  conftest.py  patch.py  schemas.py  test_api.py  test_async_paginator.py  test_bases.py  test_cursor.py  test_customization.py  test_invalid_usage.py  test_iterables.py  test_links.py  test_openapi.py  test_paginator.py  test_utils.py  utils.py
tests/base/: __init__.py  builder.py  decorators.py  reflect.py  suite.py  types.py
tests/ext/: conftest.py  test_async_sqlalchemy.py  test_async_sqlmodel.py  test_asyncpg.py  test_beanie.py  test_bunnet.py  test_cassandra.py  test_databases.py  test_django.py  test_firestore.py  test_gino.py  test_mongoengine.py  test_motor.py  test_motor_aggregate.py  test_odmantic.py  test_orm.py  test_ormar.py  test_peewee.py  test_piccolo.py  test_pony.py  test_psycopg.py  test_pymongo.py  test_pymongo_aggregate.py  test_sqlalchemy.py  test_sqlalchemy_cursor.py  test_sqlalchemy_deprecated.py  test_sqlalchemy_from_statement.py  test_sqlalchemy_future.py  test_sqlalchemy_row_number_pagination.py  test_sqlalchemy_text.py  test_sqlmodel.py  test_tortoise.py  test_utils.py  utils.py
